--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@nuxtjs/auth-next": "5.0.0-1622918202.e815752",
     "@nuxtjs/axios": "^5.13.6",
+    "animate.css": "^4.1.1",
     "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.8.3",
+    "core-js": "^3.20.3",
     "lodash": "^4.17.21",
     "material-design-icons-iconfont": "^5.0.1",
     "node-sass": "^6.0.0",
@@ -20,6 +21,6 @@
   },
   "devDependencies": {
     "@nuxt/types": "^0.4.1",
-    "sass-loader": "^10.1.1"
+    "sass-loader": "^10.2.1"
   }
 }
