--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lodash": "^4.17.21",
     "material-design-icons-iconfont": "^5.0.1",
     "node-sass": "^6.0.0",
-    "nuxt": "^2.4.5"
+    "nuxt": "^2.4.5",
+    "vue-screen": "^1.5.6"
   },
   "devDependencies": {
     "@nuxt/types": "^0.4.1",
