--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "animate.css": "^4.1.1",
     "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.20.3",
+    "core-js": "^3.21.1",
     "lodash": "^4.17.21",
     "material-design-icons-iconfont": "^5.0.1",
     "node-sass": "^6.0.0",
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@nuxt/types": "^0.4.1",
+    "nuxt-gsap-module": "^1.6.0",
     "sass-loader": "^10.2.1"
   }
 }
