--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "material-design-icons-iconfont": "^5.0.1",
     "node-sass": "^6.0.0",
     "nuxt": "^2.4.5",
-    "vue-screen": "^1.5.6"
+    "vue-screen": "^1.5.6",
+    "nuxt-gsap-module": "^1.6.0"
   },
   "devDependencies": {
     "@nuxt/types": "^0.4.1",
-    "nuxt-gsap-module": "^1.6.0",
     "sass-loader": "^10.2.1"
   }
 }
