--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "core-js": "^3.21.1",
     "lodash": "^4.17.21",
     "material-design-icons-iconfont": "^5.0.1",
-    "node-sass": "^6.0.0",
     "nuxt": "^2.4.5",
     "vue-screen": "^1.5.6",
     "nuxt-gsap-module": "^1.6.0"
   },
   "devDependencies": {
     "@nuxt/types": "^0.4.1",
+    "@nuxtjs/style-resources": "^1.2.1",
+    "fibers": "^5.0.1",
+    "node-sass": "^6.0.1",
     "sass-loader": "^10.2.1"
   }
 }
