--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "lodash": "^4.17.21",
     "material-design-icons-iconfont": "^5.0.1",
     "nuxt": "^2.4.5",
-    "vue-screen": "^1.5.6",
-    "nuxt-gsap-module": "^1.6.0"
+    "nuxt-gsap-module": "^1.6.0",
+    "vee-validate": "^2.2.15",
+    "vue-screen": "^1.5.6"
   },
   "devDependencies": {
     "@nuxt/types": "^0.4.1",
