--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "frontend",
   "version": "1.0.0",
+  "engines": {
+    "node": "^14.16.0 || ^16.10.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
+  },
   "private": true,
   "scripts": {
     "dev": "nuxt",
