--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.nuxt
 
 # Runtime data
 pids
@@ -67,7 +66,10 @@ typings/
 .next
 
 # nuxt.js build output
-#.nuxt
+.nuxt
+
+# Nuxt generate
+dist
 
 # vuepress build output
 .vuepress/dist
